<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="masterViewModel"
            type="com.xiayiye.jetpackstudy.navigation.viewmodel.MasterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".navigation.viewmodel.DetailsFragment">


        <TextView
            android:id="@+id/tvCommonNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(masterViewModel.masterNumber)}"
            android:textSize="@dimen/teamTextSize"
            app:layout_constraintBottom_toTopOf="@+id/btGoIndexPage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btAddOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->masterViewModel.add(1)}"
            android:text="@string/addOne"
            app:layout_constraintBottom_toTopOf="@+id/btGoIndexPage"
            app:layout_constraintEnd_toStartOf="@+id/btAddTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.809" />

        <Button
            android:id="@+id/btAddTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->masterViewModel.add(2)}"
            android:text="@string/addTwo"
            app:layout_constraintBottom_toTopOf="@+id/btGoIndexPage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btAddOne"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.809" />

        <Button
            android:id="@+id/btGoIndexPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_index"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>